comment: add some comment
Signed-off-by: jayson <315843093@qq.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "*.inc": "cpp",
     "*.td": "tablegen",
     "type_traits": "cpp",
-    "cstddef": "cpp"
+    "cstddef": "cpp",
+    "*.tcc": "cpp"
   }
 }
