build: rewrite the build script
Signed-off-by: jayson <315843093@qq.com>

--- a/Tests/LayerTest/CMakeLists.txt
+++ b/Tests/LayerTest/CMakeLists.txt
@@ -2,7 +2,8 @@
 set (CURRENT_PROJECT_NAME LayerTest)
 
 # 设置头文件目录
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/")
+include_directories("${MetaNN_PROJECT}/"
+                    "${CMAKE_CURRENT_SOURCE_DIR}/")
 
 # 查找指定目录下的所有头文件
 file(GLOB_RECURSE headerfile
@@ -16,8 +17,8 @@ file(GLOB_RECURSE sourceFile
     )
 
 # 设置依赖项
-link_directories("${PROJECT_BINARY_DIR}")
-link_libraries(MetaNN)
+# link_directories("${PROJECT_BINARY_DIR}")
+# link_libraries(MetaNN)
 
 # 项目添加文件
 add_executable(LayerTest
